# target-zendesk

./: .gitignore  README.md  environment.yml  meltano.yml  pyproject.toml
target_zendesk/: client.py  target.py
target_zendesk/sinks/: __init__.py  custom_object_records.py
